Fixed Overflow description error

--- a/front/adopte_1_logement/src/app/components/home/home.component.scss
+++ b/front/adopte_1_logement/src/app/components/home/home.component.scss
@@ -1,7 +1,18 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.filters{
+    width: 70%;
+}
+
 .housing-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    width: 70%;
 
     .housing-card {
         width: 300px;
